refactor: cleanup code, fix warnings and optimize backend configuration
Wprowadzono szereg poprawek mających na celu wyeliminowanie ostrzeżeń IDE oraz poprawę jakości kodu (Clean Code):

* UpdateService: Usunięto nieużywane pole `userRepository` oraz puste bloki warunkowe (`if`/`else`).
* FileStorageService: Poprawiono obsługę wyniku metody `Files.createDirectories` (przypisanie do pola), dodano walidację `null` dla nazwy pliku oraz usunięto zbędne wywołania `.toString()`.
* Logika 2FA/Auth: Usunięto nadmiarowe deklaracje `throws Exception` z metod serwisowych; dodano blok `try-catch` w `loginVerifyTwoFa` do obsługi wyjątków wewnątrz metody.
* UserRepository: Usunięto zbędną deklarację metody `findAll()` (jest ona dziedziczona z `JpaRepository`).
* ApiController:
    - Naprawiono ostrzeżenia "Parameter is never used" w endpointach retencji (dodano logowanie i pobieranie danych użytkownika).
    - Ujednolicono sposób pobierania zalogowanego użytkownika we wszystkich endpointach przy użyciu metody pomocniczej `getAuthenticatedUser`.
* ApplicationConfig:
    - Zastąpiono `Arrays.asList` nowszym i wydajniejszym `List.of` w konfiguracji CORS.
    - Zaktualizowano inicjalizację `DaoAuthenticationProvider`, naprawiając ostrzeżenie o metodzie `deprecated`.
* Inicjalizacja (CommandLineRunner): Usunięto `throws Exception` z metody `run` oraz dodano logikę wymuszającą status `enabled=true` dla konta administratora (zarówno przy tworzeniu, jak i naprawie istniejącego).